@@ -599,6 +599,9 @@ ptw_like_artillery_targeting = []
 ; targeting using an editor, instead of the list above, at the cost of losing the charm attack function.
 charm_flag_triggers_ptw_like_targeting = false
 
+; Unit types listed here won't be allowed to bombard land tiles. Same format as ptw_like_artillery_targeting, example: [Submarine "Torpedo Bomber"]
+can_bombard_only_sea_tiles = []
+
 ; Units with the king ability will defend like normal, instead of always being the last to defend in a stack. Useful for mods that use the king flag
 ; for special purposes. Does not apply in regicide games.
 ignore_king_ability_for_defense_priority = false
