@@ -6,8 +6,9 @@
 - Can select a different method for unit autoselection that searches for similar units near where the last selected unit started or ended up
   - Option named unit_cycle_search_criteria
 - Can specify a victory animation for air units in aircraft_victory_animation option
-- If any unit types are listed in limit_defensive_retreat_on_water_to_types option, only those will be allowed to defensively retreat on water
 - Any unit types listed in exclude_types_from_units_per_tile_limit will be exempted from the stack limit and not count toward it
+- If any unit types are listed in limit_defensive_retreat_on_water_to_types option, only those will be allowed to retreat defensively on water
+- Any unit types listed in can_bombard_only_sea_tiles will be prevented from bombarding land tiles
 - Option show_armies_performing_defensive_bombard that fixes defensive bombard animations being skipped when the bombarding unit is in an army
 - Improve readability of turns remaining on city builds displayed on the domestic advisor screen
   - Option named reformat_turns_remaining_on_domestic_advisor_screen
